# relaypay

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTEXT.md  Dockerfile.console  Dockerfile.python  Makefile  README.md  compose.production.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  asgi.py  main.py
apps/console/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.video.config.ts  tsconfig.tsbuildinfo
apps/provider/: __init__.py  asgi.py  main.py
apps/receiver/: __init__.py  asgi.py  main.py
apps/worker/: __init__.py  celery_app.py  poller.py  tasks.py
docs/: architecture.md  deployment.md  limitations.md  test-evidence.md  threat-model.md  week-4-gate.md
docs/adr/: 001-route-aware-idempotency.md  002-status-only-recovery.md  003-transactional-events.md  004-immutable-ledger.md  README.md
docs/migrations/: v0.2.0.md  v0.3.0.md
docs/phase-2/: implementation-roadmap.md  product-contract.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md
docs/vibe-coding/: 01-prd.md  02-trd.md  03-app-flow.md  04-ui-ux-design-brief.md  05-backend-schema.md  06-implementation-plan.md  README.md
infra/caddy/: Caddyfile
migrations/provider/: alembic.ini  env.py
migrations/receiver/: alembic.ini  env.py
migrations/relaypay/: alembic.ini  env.py
scripts/: __init__.py  bootstrap_platform_admin.py  lost_response_demo.py  reconciliation_demo.py  reset_sandbox.py  seed.py  verify_m1_upgrade.py  verify_m2_upgrade.py
scripts/video/: build_release_video.sh  captions.srt
(+65 files in other folders)
