[project]
name = "relaypay"
version = "0.3.0"
description = "Evidence-first INR payment-orchestration sandbox"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.18.5",
  "argon2-cffi>=25.1.0,<26",
  "celery[redis]>=5.6.0,<6",
  "cryptography>=46.0.0,<47",
  "fastapi[standard-no-fastapi-cloud-cli]==0.139.0",
  "httpx2==2.7.0",
  "psycopg[binary,pool]>=3.2.0,<4",
  "pydantic-settings>=2.10.0,<3",
  "sqlalchemy==2.0.51",
]

[dependency-groups]
dev = [
  "mypy>=1.17.0,<2",
  "pytest>=8.4.0,<9",
  "pytest-cov>=6.2.0,<7",
  "pytest-xdist>=3.8.0,<4",
  "ruff>=0.12.0,<0.13",
]

[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/relaypay"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = [".", "packages"]
markers = [
  "integration: requires the Compose PostgreSQL and Redis services",
  "concurrency: exercises database locking and race recovery",
  "e2e: exercises the complete deployed process graph",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["E501"]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = ["packages"]
exclude = ["migrations"]
